codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_account_metadata.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                           │
│                                                                     │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date       │
│ information on rate limits and credits                              │
│                                                                     │
│  Model:          gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                           │
│  Permissions:    Custom (read-only, on-request)                     │
│  Agents.md:      <none>                                             │
│  Account:        dev@example.com (Business)                         │
│  Organization:   Acme Corp                                          │
│  Groups:         Engineering, Codex Pilots                          │
│                                                                     │
│  Limits:         data not available yet                             │
╰─────────────────────────────────────────────────────────────────────╯
